Minor ui optimization

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="%PUBLIC_URL%/favicon.png"
+    />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -89,7 +93,10 @@
       media="all"
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200;300;400;500;600;700"
     />
-
+    <link href="%PUBLIC_URL%/css/normalize.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/plugins.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/components.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/style-dark.css" rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>
       Loozr | Decentralized music streaming and investment platform on Web 3.0
@@ -109,7 +116,9 @@
       gtag("config", "G-XCT2D3BRJQ");
     </script>
   </head>
-  <body class="ltr business-theme path-frontpage home page-node-type-homepage home bd-dark">
+  <body
+    class="ltr business-theme path-frontpage home page-node-type-homepage home bd-dark"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="%PUBLIC_URL%/js/vendor/jquery.min.js"></script>
