Replace algo partnership with algo

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     />
     <meta
       name="keywords"
-      content="nft, music NFT, music investments, Loozr coin, Loozr discord, Loozr LIVE, decentralized community, metaverse, music investment, live-streaming, artist, musician, DJ, music, producer, fans, artiste, followers, p2e, MusicFi, MusicDAO, music player, music invest, Loozr, klynox, Algorand blockchain, Algo"
+      content="nft, music NFT, music investments, Loozr coin, Loozr discord, Loozr LIVE, decentralized community, metaverse, music investment, live-streaming, artist, musician, DJ, music, producer, fans, artiste, followers, p2e, MusicFi, MusicDAO, music player, music invest, Loozr, klynox, Near blockchain, Near"
     />
     <meta name="language" content="English" />
     <meta name="revisit-after" content="1 days" />
