Fix: Login responsive

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,18 @@
     <link href="%PUBLIC_URL%/css/components.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/style-dark.css" rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
     <title>
       Loozr | Decentralized music streaming and investment platform on Web 3.0
     </title>
@@ -125,5 +137,9 @@
     <script src="%PUBLIC_URL%/js/jquery-migrate-3.0.0.min.js"></script>
     <script src="%PUBLIC_URL%/js/plugins.js"></script>
     <script src="%PUBLIC_URL%/js/scripts.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
   </body>
 </html>
