--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <!-- Twitter Summary card images must be at least 120x120px -->
     <meta
       name="twitter:image"
-      content="https://loozr.io/img/bg-image.png"
+      content="%PUBLIC_URL%/img/bg-image.png"
     />
 
     <!-- Open Graph data -->
@@ -45,7 +45,7 @@
     <meta property="og:url" content="https://loozr.io" />
     <meta
       property="og:image"
-      content="https://loozr.io/img/bg-image.png"
+      content="%PUBLIC_URL%/img/bg-image.png"
     />
     <meta
       property="og:description"
